--- a/hw6/css/styles.css
+++ b/hw6/css/styles.css
@@ -1,55 +1,38 @@
-@font-face {
-    font-family: ceraPro-Bold;
-    src: url(../font/CeraPro-Bold.ttf);    
- }
+/* * {
+    box-sizing: border-box;
+} */
 
- @font-face {
-    font-family: ceraPro-Regular;
-    src: url(../font/CeraPro-Regular.ttf);    
- }
-
- @font-face {
-    font-family: ceraPro-Medium;
-    src: url(../font/CeraPro-Medium.ttf);    
- }
-
- @font-face {
-    font-family: ceraPro-Black;
-    src: url(../font/CeraPro-Black.ttf);    
- }
-
-.center-head {
+.center-head {    
     max-width: 1200px;
-    height: 53px;
+    height: 51px;
     margin: 0 auto;
     position: relative;
+    margin-top: 30px;
     margin-bottom: 12px;
+    vertical-align: middle;
+    box-shadow: 0 0.3px rgba(70, 163, 88, 0.5);
 }
 
-.center-body{
-    max-width: 1200px;
-    height: 450px;
-    margin: 0 auto;
-    position: relative;
-    justify-content: space-between;
-    background-color:  rgba(245, 245, 245, 0.5);
+.logo{
+    display: inline-block;
+    vertical-align: middle;
 }
 
 .navigation {
     display: inline-block;   
-    margin-top: 8px;
-    padding-left: 229px;
+    margin-left: 225px;
+    height: 45px;
 }
 
-.navigation li {
+.item {
     display: inline-block;
+    margin-right: 50px;
 }
 
 .navigation-text{
-    display: inline-block;
-    margin-right: 50px;
+    display: inline-block;        
     font-size: 16px;
-    font-family: ceraPro-Regular;
+    font-family: "ceraPro-Regular";
     color: #3D3D3D;
     line-height: 20.11px;
     font-weight: 400;
@@ -57,8 +40,10 @@
 }
 
 .navigation-text:active {
-    font-family: ceraPro-Medium;
-    border-bottom: 2px solid rgba(70, 163, 88, 0.5);     
+    display: block;      
+    text-shadow: 0.8px 0.8px #3D3D3D; 
+    padding-bottom: 24.5px;
+    box-shadow: 0 3px rgba(70, 163, 88, 0.5);
   }
 
 .log_btn {
@@ -72,7 +57,9 @@
     cursor: pointer;
     position: absolute;
     right: 0;
-    font-family: ceraPro-Regular; 
+    font-family: "ceraPro-Regular"; 
+    vertical-align: middle;
+    margin-top: -1px;
 }
 
 .logout-icon{
@@ -81,28 +68,22 @@
     margin-right: 4px;
 }
 
-.shopnow-btn {
-    display: inline-block;
-    background-color: #46A358;
-    text-transform: uppercase;
-    font-family: ceraPro-Medium; 
-    margin-top: 44px;
-    margin-left: 41px; 
-    color: #fff;
-    width: 140px;
-    height: 40px;
-    border-radius: 6px;
-    font-size: 16px;
-    cursor: pointer;     
+
+.center-body{
+    max-width: 1200px;
+    height: 450px;
+    margin: 0 auto;
+    position: relative;
+    background-color:  rgba(245, 245, 245, 0.5);
 }
 
 .sec-heading{    
     font-size: 14px;
     color: #3D3D3D;
     text-transform: uppercase;
-    padding-top: 68px;
-    padding-left: 43px;  
-    font-family: ceraPro-Medium; 
+    padding-top: 67.1px;
+    margin-left: 43.2px;  
+    font-family: "ceraPro-Medium"; 
     letter-spacing: 0.1em;
     line-height: 16px;
     font-weight: 500;
@@ -114,13 +95,13 @@
     line-height: 70px;
     text-transform: uppercase;
     color:#3D3D3D;    
-    font-family: ceraPro-Black;
+    font-family: "ceraPro-Black";
     font-weight: 900;         
     white-space: nowrap;
     width: 530px;
     height: 140px;
-    padding-top: 7px;
-    padding-left: 40px; 
+    margin-top: 5.7px;
+    margin-left: 40.2px; 
 }
 
 .highlight{
@@ -134,16 +115,33 @@
     height: 45px;
     line-height: 24px;
     font-weight: 400;
-    font-family: ceraPro-Regular;    
-    padding-top: 5px;
-    padding-left: 43px;  
+    font-family: "ceraPro-Regular";    
+    margin-top: 6px;
+    margin-left: 43px;  
     white-space: nowrap;
+}
+
+.shopnow-btn {
+    display: inline-block;
+    background-color: #46A358;
+    text-transform: uppercase;
+    font-family: "ceraPro-Medium"; 
+    margin-top: 46.5px;
+    margin-left: 41px; 
+    color: #fff;
+    width: 140px;
+    height: 40px;
+    border-radius: 6px;
+    font-size: 16px;
+    cursor: pointer;     
 }
 
 .foto{
     position: absolute;
     right: 0;
     top: 0;
+    height: 450;
+    width: 507;
 }
 
 
