--- a/hw6-7/css/asidemenu.css
+++ b/hw6-7/css/asidemenu.css
@@ -28,9 +28,7 @@
    line-height: 40px;
    text-transform: capitalize;   
    margin-top: 7px;
- }
- .prod-cat-name{
-   margin-left: 30px;   
+   padding-left: 30px;
  }
 
  .super-sale-banner{
