--- a/hw6-7/css/product.css
+++ b/hw6-7/css/product.css
@@ -8,7 +8,7 @@
     display: flex;
     flex-grow: 3;
     flex-wrap: wrap;
-    gap: 70px 33px;
+    gap: 73px 33px;
 }
 
 .product{
@@ -53,16 +53,15 @@
     margin-left: 16px;
 }
 
-/* .sale-banner{
+.sale-banner{
     position: absolute;   
+    top: 14px;
     display: flex;
     justify-content: center; 
-    align-items: center; 
-    top: 14px;
+    align-items: center;     
     width: 80px;
     height: 29px;
-    background-color: rgba(70, 163, 88, 1);    
-    z-index: 10;
+    background-color: rgba(70, 163, 88, 1);  
 }
 
 .sale-banner-text{
@@ -72,16 +71,16 @@
     font-weight: 500;
     line-height: 16px;
     font-family: "ceraPro-Regular";    
-} */
+}
 
 .page-numb{
     display: flex;
-    float: right;
-    align-items: flex-end;
+    justify-content: flex-end;
 }
 
 .page-list{
     display: inline-flex; 
+    margin-top: 94px;    
 } 
 
 .numb-list{
@@ -98,9 +97,11 @@
     color: rgba(61, 61, 61, 1);
     font-weight: 300;
     font-size: 18px;
-    line-height: 16px; 
-    margin-top: 90px;
-    
+    line-height: 16px;   
+}
+
+.numb-list:last-child{
+    margin-right: 0;
 }
 
 .numb-list:active {    
