--- a/hw6-7/css/product.css
+++ b/hw6-7/css/product.css
@@ -111,3 +111,25 @@
     font-weight: 700;
     border: none;
 } 
+
+.prod-hover-icon{    
+    position:absolute;       
+    bottom: 7px;    
+    margin-left: 9px;
+    display: none;
+}
+
+.product:hover .prod-hover-icon {
+    display: inline-flex; 
+}
+
+.hover-icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #FFFFFF;
+    border-radius: 4px;
+    width: 35px;
+    height: 35px;    
+    margin-right: 10px;
+}
