--- a/hw-I/css/blog-posts.css
+++ b/hw-I/css/blog-posts.css
@@ -27,20 +27,25 @@
 
 .posts-container {
     display: flex;
-    justify-content: space-between;
     margin-top: 31px;
+    gap:25px;
   }
   
 .posts-container-item {
-    flex: 1; 
     background-color: #FBFBFB;
-    margin-right: 44px;
-    width: 268px;
-  }
+    flex-grow: 1;
+    flex-basis: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+.posts-container-item:last-child{
+    margin-right: 0;
+}
 
 .post-text-center{
-    margin-top: 7px;
-    margin-left: 17px;
+    padding-top: 7px;
+    padding-left: 17px;
 }
 
 .post-data{
