--- a/hw-I/css/blog-posts.css
+++ b/hw-I/css/blog-posts.css
@@ -28,15 +28,14 @@
 .posts-container {
     display: flex;
     margin-top: 31px;
-    gap:25px;
+    justify-content: space-between;
   }
   
 .posts-container-item {
+    flex: 1; 
     background-color: #FBFBFB;
-    flex-grow: 1;
-    flex-basis: 0;
-    display: flex;
-    flex-direction: column;
+    margin-right: 44px;
+    width: 268px;
 }
 
 .posts-container-item:last-child{
